# IDGcode

./: CMakeLists.txt  Doxyfile  blob.hpp  codeeditor.cpp  codeeditor.hpp  commit.hpp  compareworker.hpp  cppsyntaxhighlighter.cpp  cppsyntaxhighlighter.hpp  findme.cpp  findme.hpp  loginwindow.cpp  loginwindow.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mergeworker.hpp  preferencesdialog.cpp  preferencesdialog.hpp  repository.cpp  repository.hpp  resources.qrc  sendcommittask.hpp  sendworker.hpp  tag.cpp  tag.hpp  tree.hpp
html/: annotated.html  blob_8hpp_source.html  classBlob-members.html  classBlob.html  classBlob__coll__graph.map  classBlob__coll__graph.md5  classCPPSyntaxHighlighter-members.html  classCPPSyntaxHighlighter.html  classCPPSyntaxHighlighter__coll__graph.map  classCPPSyntaxHighlighter__coll__graph.md5  classCodeEditor-members.html  classCodeEditor.html  classCodeEditor__coll__graph.md5  classCodeEditor__inherit__graph.map  classCommit-members.html  classCommit.html  classCommitWorker-members.html  classCommitWorker.html  classCommitWorker__coll__graph.map  classCommitWorker__coll__graph.md5  classCommitWorker__inherit__graph.map  classCommitWorker__inherit__graph.md5  classCommit__coll__graph.map  classCommit__coll__graph.md5  classCompareWorker-members.html  classCompareWorker.html  classCompareWorker__coll__graph.map  classCompareWorker__coll__graph.md5  classCompareWorker__inherit__graph.map  classCompareWorker__inherit__graph.md5  classFindMe-members.html  classFindMe.html  classFindMe__coll__graph.map  classFindMe__inherit__graph.md5  classLineNumberArea-members.html  classLineNumberArea.html  classLineNumberArea__coll__graph.map  classLineNumberArea__coll__graph.md5  classLineNumberArea__inherit__graph.map  classLineNumberArea__inherit__graph.md5  (+87 more)
latex/: annotated.tex  blob_8hpp_source.tex  classBlob.tex  classCPPSyntaxHighlighter.tex  classCPPSyntaxHighlighter__inherit__graph.md5  classCodeEditor.tex  classCodeEditor__coll__graph.md5  classCommit.tex  classCommitWorker.tex  classCommitWorker__coll__graph.md5  classCommitWorker__inherit__graph.md5  classCommit__coll__graph.md5  classCompareWorker.tex  classCompareWorker__coll__graph.md5  classCompareWorker__inherit__graph.md5  classFindMe.tex  classFindMe__coll__graph.md5  classLineNumberArea.tex  classLineNumberArea__coll__graph.md5  classLineNumberArea__inherit__graph.md5  classLoginWindow.tex  classLoginWindow__coll__graph.md5  classMainWindow.tex  classMainWindow__coll__graph.md5  classMainWindow__inherit__graph.md5  classMergeWorker.tex  classMergeWorker__coll__graph.md5  classMergeWorker__inherit__graph.md5  classPreferencesDialog.tex  classPreferencesDialog__inherit__graph.md5  classRepository.tex  (+29 more)
(+11 files in other folders)
